<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">bbruner-notes</string>
    <string name="action_settings">Action Settings</string>
    <string name="new_todo_name">New To Do Name</string>
    <string name="new_todo_button">New</string>
    <string name="to_do_image">To Do</string>
    <string name="temp_string">Updating...</string>
    <string name="checkbox_help">Check Finished To Do Items</string>
    <string name="action_search">search</string>
    <string name="mark_finished_string">Mark as Finished</string>
    <string name="mark_unfinished_string">Mark as Unfinished</string>
    <string name="archive">Archive</string>
    <string name="title_activity_archive">ArchiveActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="archive_hint">Archived</string>
    <string name="go_to_todo">Main To Dos</string>
    <string name="title_activity_all">AllActivity</string>
    <string name="all_hint">All</string>
    <string name="go_to_all_from_main">All To Dos</string>
    <string name="go_to_archived_from_main">Archived To Dos</string>
    <string name="go_to_archived">Archived To Dos</string>
    <string name="go_to_all_from_archived">All To Dos</string>
    <string name="statistics">Statistics</string>
    <string name="email">Email Selected</string>
    <string name="title_activity_email">Please Enter An Email Address</string>
    <string name="enter_email">Enter Email Address</string>
    <string name="email_button">Continue</string>
    <string name="email_validation_warning">This app requires a valid email address.</string>
    <string name="change_email">Change Email</string>

</resources>
