<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.bbruner_notes.MainActivity" >
    
    <item 
        android:id="@+id/go_to_all_from_main"
        android:icon="@drawable/ic_action_collection"
        android:title="@string/go_to_all_from_main"
        app:showAsAction="ifRoom" />
    
    <item 
        android:id="@+id/go_to_archived_from_main"
        android:icon="@drawable/ic_action_sd_storage"
        android:title="@string/go_to_archived_from_main"
        app:showAsAction="ifRoom" />
    
    <item 
        android:id="@+id/statistics"
        android:title="@string/statistics"
        app:showAsAction="never" />
    
            <item 
        android:id="@+id/change_email"
        android:title="@string/change_email"
        app:showAsAction="never" />
    

</menu>
