<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
       
    <!--  A search option, make it appear in the action bar if there is room -->
    <item android:id="@+id/action_unarchive"
        android:icon="@drawable/ic_action_labels"
        android:title="@string/archive"
        android:showAsAction="ifRoom" />
    
    <item android:id="@+id/action_search"
        android:icon="@drawable/ic_action_discard"
        android:title="@string/action_search"
        android:showAsAction="ifRoom" />
    
    <item android:id="@+id/mark_finished"
        android:icon="@drawable/ic_action_important_light"
        android:title="@string/mark_finished_string"
        android:showAsAction="ifRoom" />
    
    <item android:id="@+id/mark_unfinished"
        android:icon="@drawable/ic_action_not_important_light"
        android:title="@string/mark_unfinished_string"
        android:showAsAction="ifRoom" />

</menu>
